# PrimeNumberGenerator

./: CMakeLists.txt  README.md  azure-pipelines-1.yml  primeNumberGenerator.cpp
